force-app/main/default/objects/RW_Presales_Communication__c/RW_Presales_Communication__c.object-meta.xml
<CustomObject>
    <label>Presales Communication</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Communication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>