force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Communication_Sent_To_DigitalLead__c.field-meta.xml
<CustomField>
    <fullName>RW_Communication_Sent_To_DigitalLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication Sent To DigitalLead</label>
    <type>Checkbox</type>
</CustomField>