force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Presales Communication</relationshipLabel>
    <relationshipName>Presales_Communication</relationshipName>
    <type>Lookup</type>
</CustomField>