force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead_Email__c</fullName>
    <label>Lead Email</label>
    <type>Email</type>
</CustomField>