force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Lead_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead_Mobile_No__c</fullName>
    <label>Lead Mobile No</label>
    <type>Phone</type>
</CustomField>