force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Meeting_Email_WhatsApp_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Meeting_Email_WhatsApp_Sent_Date__c</fullName>
    <label>Meeting Email&amp;WhatsApp Sent Date</label>
    <type>DateTime</type>
</CustomField>