force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_MS_Teams__c.field-meta.xml
<CustomField>
    <fullName>RW_MS_Teams__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MS Teams</label>
    <referenceTo>RW_MS_Teams__c</referenceTo>
    <relationshipLabel>Presales Communication</relationshipLabel>
    <relationshipName>Presales_Communication</relationshipName>
    <type>Lookup</type>
</CustomField>