force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Project_Details_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Details_Type__c</fullName>
    <label>Project Details Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Location Videos</fullName>
            </value>
            <value>
                <fullName>Location maps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>