force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_ProjectDetails_Sent__c.field-meta.xml
<CustomField>
    <fullName>RW_ProjectDetails_Sent__c</fullName>
    <label>RW ProjectDetails Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>