force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_ProjectDetails_WhatsApp_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_ProjectDetails_WhatsApp_Sent_Date__c</fullName>
    <label>ProjectDetails WhatsApp Sent Date</label>
    <type>DateTime</type>
</CustomField>