force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Prospect__c.field-meta.xml
<CustomField>
    <fullName>RW_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Presales Communication</relationshipLabel>
    <relationshipName>Presales_Communication</relationshipName>
    <type>Lookup</type>
</CustomField>