force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Visit_Cnfrmed_SMS_WhatsApp_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Visit_Cnfrmed_SMS_WhatsApp_Sent_Date__c</fullName>
    <label>Visit Confirmed SMS&amp;WhatsApp Sent Date</label>
    <type>DateTime</type>
</CustomField>