force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_Visit_Feedback_Mode_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>RW_Visit_Feedback_Mode_of_Communication__c</fullName>
    <label>Visit Feedback Mode of Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>