force-app/main/default/objects/RW_Presales_Communication__c/fields/RW_VisitFeedback_EmailWhatsApp_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_VisitFeedback_EmailWhatsApp_Sent_Date__c</fullName>
    <label>Visit Feedback Email&amp;WhatsApp Sent Date</label>
    <type>DateTime</type>
</CustomField>